[gd_scene load_steps=15 format=3 uid="uid://bl7d8jwotcuws"]

[ext_resource type="PackedScene" uid="uid://v8jvhtuvyeij" path="res://models/phone/phone.glb" id="1_qnpo2"]
[ext_resource type="Script" path="res://models/phone/phones.gd" id="2_hu3e3"]
[ext_resource type="Shader" path="res://models/phone/phone.gdshader" id="4_ejdu2"]
[ext_resource type="Texture2D" uid="uid://vd5jphf13nun" path="res://models/phone/map.png" id="4_mdlhq"]
[ext_resource type="PackedScene" uid="uid://bnvodaqvhpkdb" path="res://models/phone/phone_gui.tscn" id="4_v6eo8"]
[ext_resource type="Texture2D" uid="uid://bnmpxxnhif7av" path="res://models/shared/smudges_basecolor.png" id="4_v74j0"]
[ext_resource type="Script" path="res://models/phone/notifications.gd" id="5_pqb1u"]
[ext_resource type="Texture2D" uid="uid://m76np0thy42y" path="res://models/phone/marc.png" id="5_s4yx2"]
[ext_resource type="Script" path="res://models/phone/phone_test.gd" id="6_vrhos"]
[ext_resource type="Script" path="res://models/phone/nob.gd" id="10_kb7as"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vffgr"]
size = Vector3(0.5, 0.02, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_gv248"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lu1bf"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_ejdu2")
shader_parameter/albedo = SubResource("ViewportTexture_gv248")
shader_parameter/scuff = ExtResource("4_v74j0")
shader_parameter/ao = ExtResource("4_mdlhq")
shader_parameter/marc = ExtResource("5_s4yx2")

[sub_resource type="Curve3D" id="Curve3D_y3bud"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="phone" instance=ExtResource("1_qnpo2")]
script = ExtResource("2_hu3e3")

[node name="StaticBody3D" type="Area3D" parent="." index="0"]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)
collision_layer = 8
collision_mask = 0
input_ray_pickable = false
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_vffgr")

[node name="Phone" parent="." index="1"]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_lu1bf")

[node name="SubViewport" type="SubViewport" parent="." index="2"]
disable_3d = true
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(1000, 2000)
size_2d_override = Vector2i(400, 800)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="PhoneGui" parent="SubViewport" index="0" instance=ExtResource("4_v6eo8")]
device_width = Vector2(385, 700)

[node name="CanvasLayer2" type="CanvasLayer" parent="." index="3"]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Notifications" type="Control" parent="CanvasLayer2/MarginContainer" index="0"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("5_pqb1u")

[node name="Debug" type="CanvasLayer" parent="." index="4"]
script = ExtResource("6_vrhos")

[node name="Button" type="Button" parent="Debug" index="0"]
offset_left = 1403.0
offset_top = 50.0
offset_right = 1528.0
offset_bottom = 81.0
text = "NEW CONTACT"

[node name="Button2" type="Button" parent="Debug" index="1"]
offset_left = 1403.0
offset_top = 99.0
offset_right = 1528.0
offset_bottom = 130.0
text = "NEW MESSAGE"

[node name="Button3" type="Button" parent="Debug" index="2"]
offset_left = 1400.0
offset_top = 144.0
offset_right = 1525.0
offset_bottom = 175.0
text = "VIBRATE"

[node name="Views" type="Node3D" parent="." index="5"]

[node name="Marker3D" type="Marker3D" parent="Views" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00764202, 0.113948, 0.000383288)

[node name="0" type="Node3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0211966, -9.78545e-05, -0.0218321)
script = ExtResource("10_kb7as")
scale_guide = 0.35

[node name="Path" type="Path3D" parent="0" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
curve = SubResource("Curve3D_y3bud")

[node name="PathFollow" type="PathFollow3D" parent="0/Path" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.1, 0, 0)
use_model_front = true
loop = false

[node name="RemoteTransform" type="RemoteTransform3D" parent="0/Path/PathFollow" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
update_scale = false

[node name="Top" type="Marker3D" parent="0" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[connection signal="input_event" from="StaticBody3D" to="." method="_input_event"]
[connection signal="pressed" from="Debug/Button" to="Debug" method="_new_contact_pressed"]
[connection signal="pressed" from="Debug/Button2" to="Debug" method="_new_message_pressed"]
[connection signal="pressed" from="Debug/Button3" to="Debug" method="_vibrate_pressed"]
